--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "gulp build, node ./bin/www"
   },
   "dependencies": {
     "angular2": "2.0.0-beta.0",
