--- a/package.json
+++ b/package.json
@@ -1,34 +1,28 @@
 {
-  "name": "express-ng2-boilerplate",
+  "name": "open-door",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "gulp build & node ./bin/www"
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "lite": "lite-server",
+    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" "
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.0",
-    "body-parser": "^1.13.3",
-    "cookie-parser": "^1.3.3",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
-    "express": "^4.13.3",
-    "express-handlebars": "^3.0.0",
-    "morgan": "^1.6.1",
+    "angular2": "2.0.0-beta.2",
+    "systemjs": "0.19.6",
+    "es6-promise": "3.0.2",
+    "es6-shim": "0.33.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
-    "serve-favicon": "^2.3.0",
-    "systemjs": "0.19.17",
-    "zone.js": "0.5.10"
-  },
-  "devDependencies": {
-    "concurrently": "^1.0.0",
-    "gulp": "^3.9.0",
-    "gulp-less": "^3.0.1",
-    "gulp-livereload": "^3.8.0",
-    "gulp-nodemon": "^2.0.2",
-    "gulp-plumber": "^1.0.0",
-    "gulp-typescript": "^2.10.0",
-    "merge2": "^1.0.0",
-    "typescript": "^1.7.3"
+    "zone.js": "0.5.10",
+    "gulp": "3.9.0",
+    "gulp-less": "3.0.1",
+    "gulp-livereload": "3.8.0",
+    "gulp-nodemon": "2.0.2",
+    "gulp-plumber": "1.0.0",
+    "gulp-typescript": "2.10.0",
+    "merge2": "1.0.0",
+    "typescript": "1.7.3"
   }
 }
