--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "gulp",
-    "build": "gulp build"
+    "build": "gulp build",
+    "predeploy": "gulp predeploy",
+    "deploy": "gulp deploy"
   },
   "engines": {
     "node": "5.5.0"
@@ -14,6 +16,7 @@
     "es6-promise": "3.0.2",
     "es6-shim": "0.33.3",
     "gulp": "3.9.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-inline-ng2-template": "0.0.10",
     "gulp-less": "3.0.5",
     "gulp-livereload": "3.8.1",
