--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "start": "gulp",
     "build": "gulp build",
-    "deploy": "gulp deploy"
+    "deploy": "gulp deploy",
+    "watch": "gulp watch"
   },
   "engines": {
     "node": "5.5.0"
   },
   "dependencies": {
     "angular2": "2.0.0-beta.2",
+    "bootstrap": "^3.3.6",
     "es6-promise": "3.0.2",
     "es6-shim": "0.33.3",
     "gulp": "3.9.0",
@@ -22,6 +24,7 @@
     "gulp-nodemon": "2.0.6",
     "gulp-plumber": "1.0.1",
     "gulp-typescript": "2.10.0",
+    "jquery": "^2.2.0",
     "merge2": "1.0.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
