--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-typescript": "2.10.0",
     "jquery": "^2.2.0",
     "merge2": "1.0.0",
+    "ng2-bootstrap": "^1.0.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
     "systemjs": "0.19.6",
