--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "gulp watch"
   },
   "engines": {
-    "node": "5.5.0"
+    "node": "5.6.0"
   },
   "dependencies": {
     "angular2": "2.0.0-beta.2",
@@ -26,6 +26,7 @@
     "gulp-typescript": "2.10.0",
     "jquery": "^2.2.0",
     "merge2": "1.0.0",
+    "moment": "^2.11.2",
     "ng2-bootstrap": "^1.0.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
