--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-plumber": "1.0.1",
     "gulp-typescript": "2.10.0",
     "path": "^0.12.7",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "socket.io": "^1.4.5"
   }
 }
