--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "angular2": "2.0.0-beta.2",
-    "angular2-modal": "0.0.4",
+    "angular2-modal": "^0.1.0",
     "bootstrap": "^3.3.6",
     "es6-promise": "3.0.2",
     "es6-shim": "0.33.3",
