--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "angular2": "2.0.0-beta.2",
+    "angular2-cookie": "^1.1.0",
     "angular2-modal": "^0.1.0",
     "bootstrap": "^3.3.6",
     "es6-promise": "3.0.2",
@@ -21,7 +22,6 @@
     "merge2": "1.0.0",
     "moment": "^2.11.2",
     "ng2-bootstrap": "^1.0.3",
-    "ng2-cookies": "^0.1.4",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
     "systemjs": "0.19.6",
