--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
   "name": "publion",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "gulp develop",
     "build": "gulp build",
     "deploy": "gulp deploy",
-    "watch": "gulp watch"
+    "watch": "gulp watch",
+    "typings": "typings",
+    "postinstall": "typings install"
   },
   "engines": {
     "node": "5.6.0"
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.2",
+    "angular2": "2.0.0-beta.13",
+    "systemjs": "0.19.25",
+    "es6-shim": "^0.35.0",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.2",
+    "zone.js": "0.6.6",
     "angular2-cookie": "^1.1.0",
     "angular2-modal": "^0.1.0",
     "bootstrap": "^3.3.6",
     "es6-promise": "3.0.2",
-    "es6-shim": "0.33.3",
     "jquery": "^2.2.0",
     "merge2": "1.0.0",
     "moment": "^2.11.2",
-    "ng2-bootstrap": "^1.0.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.0",
-    "systemjs": "0.19.6",
-    "typescript": "1.7.5",
-    "zone.js": "0.5.10"
+    "ng2-bootstrap": "^1.0.3"
   },
   "devDependencies": {
+    "typings":"^0.7.11",
     "express": "^4.13.4",
     "gulp": "3.9.0",
     "gulp-gh-pages": "^0.5.4",
@@ -37,9 +39,10 @@
     "gulp-livereload": "3.8.1",
     "gulp-nodemon": "^2.0.6",
     "gulp-plumber": "1.0.1",
-    "gulp-typescript": "2.10.0",
+    "gulp-typescript": "^2.10.0",
     "path": "^0.12.7",
     "serve-favicon": "^2.3.0",
-    "socket.io": "^1.4.5"
+    "socket.io": "^1.4.5",
+    "typescript": "^1.8.9"
   }
 }
