--- a/package.json
+++ b/package.json
@@ -14,15 +14,28 @@
     "node": "5.6.0"
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.13",
-    "systemjs": "0.19.25",
+    "@angular/common":  "2.0.0-rc.1",
+    "@angular/compiler":  "2.0.0-rc.1",
+    "@angular/core":  "2.0.0-rc.1",
+    "@angular/http":  "2.0.0-rc.1",
+    "@angular/platform-browser":  "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic":  "2.0.0-rc.1",
+    "@angular/router":  "2.0.0-rc.1",
+    "@angular/router-deprecated":  "2.0.0-rc.1",
+    "@angular/upgrade":  "2.0.0-rc.1",
+
+    "systemjs": "0.19.27",
     "es6-shim": "^0.35.0",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.6.6",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "^0.6.12",
+
+    "angular2-in-memory-web-api": "0.0.7",
+    "bootstrap": "^3.3.6",
+
     "angular2-cookie": "^1.1.0",
     "angular2-modal": "^0.1.0",
-    "bootstrap": "^3.3.6",
+    
     "es6-promise": "3.0.2",
     "jquery": "^2.2.0",
     "merge2": "1.0.0",
